2008-06-09 - Sean Huber (shuber@huberry.com)
	* unauthenticated method stores request_uri in session[:return_to]

2008-06-09 - Sean Huber (shuber@huberry.com)
	* Removed accidently left over hard coded logic from password_required?

2008-06-09 - Sean Huber (shuber@huberry.com)
	* Reloading a model sets password_changed? to false

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Changed email addresses in CHANGELOG

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Added find_current_user functional tests

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Renamed test files
	* find_current_user always returns current_user

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Renamed login_required to authentication_required

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Renamed @searched_for_current_user to @queried_for_current_user

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Added extra uses_authentication field options
	* Updated README

2008-06-05 - Sean Huber (shuber@huberry.com)
	* current_user returns nil unless logged_in?
	* Updated README

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-05 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Controller no longer has to call uses_authentication - logic included automatically
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Updated README

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Added functional tests

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Fixed functional test exception

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Controller and model must call uses_authentication

2008-06-04 - Sean Huber (shuber@huberry.com)